# t70

./: .gitignore  CMakeLists.txt
algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.h  wind_functions.cpp  wind_functions.h
core/: CMakeLists.txt  T70_Win.ui  mainwindow.cpp  mainwindow.h  threadModel.cpp  threadModel.h  utilTimeClassQt.cpp  utilTimeClassQt.h
database/: CMakeLists.txt  databasemanager.cpp  databasemanager.h
exchange/: CMakeLists.txt  Struct_DeviceConnect.h  Struct_FromRmiOper.h  Struct_FromRmiPilot.h  Struct_ISU.h  Struct_ToRmiNavig.h  bss.cpp  bss.h  exchange.cpp  exchange.h  switches.cpp  switches.h  uks.cpp  uks.h
src/: CMakeLists.txt
systems/: CMakeLists.txt
systems/aircondition/: CMakeLists.txt  aircondition_10.cpp  aircondition_11.cpp  aircondition_12.cpp  aircondition_13.cpp  aircondition_14.cpp  aircondition_15.cpp  aircondition_16.cpp  aircondition_17.cpp  aircondition_1_2_3.cpp  aircondition_4_5.cpp  aircondition_6_7.cpp  aircondition_8.cpp  aircondition_9.cpp  aircondition_int.cpp  aircondition_int.h
systems/antifire/: CMakeLists.txt  antifire_1.cpp  antifire_1.h  antifire_2.cpp  antifire_2.h  antifire_3.cpp  antifire_3.h  antifire_int.cpp  antifire_int.h
systems/antiicing/: CMakeLists.txt  antiicing_1.cpp  antiicing_2.cpp  antiicing_3.cpp  antiicing_4.cpp  antiicing_5.cpp  antiicing_6.cpp  antiicing_int.cpp  antiicing_int.h
systems/bailout/: CMakeLists.txt  bailout_1_2.cpp  bailout_int.cpp  bailout_int.h
systems/brakes/: CMakeLists.txt  brakes_1.cpp  brakes_2.cpp  brakes_3.cpp  brakes_4.cpp  brakes_5.cpp  brakes_6.cpp  brakes_int.cpp  brakes_int.h
systems/cabinlighting/: CMakeLists.txt  cabinlighting_1.cpp  cabinlighting_10.cpp  cabinlighting_2.cpp  cabinlighting_3.cpp  cabinlighting_4.cpp  cabinlighting_5.cpp  cabinlighting_6.cpp  cabinlighting_7.cpp  cabinlighting_8.cpp  cabinlighting_9.cpp  cabinlighting_int.cpp  cabinlighting_int.h
systems/emergencyalarm/: CMakeLists.txt  emergencyalarm_1.cpp  emergencyalarm_int.cpp  emergencyalarm_int.h
systems/hydro/: CMakeLists.txt  hydro_1.cpp  hydro_10.cpp  hydro_2.cpp  hydro_3.cpp  hydro_4.cpp  hydro_5.cpp  hydro_6.cpp  hydro_7.cpp  hydro_8.cpp  hydro_9.cpp  hydro_int.cpp  hydro_int.h
systems/landinggear/: CMakeLists.txt  landinggear_event.cpp  landinggear_event.h  landinggear_int.cpp  landinggear_int.h  landinggear_old.cpp
systems/pneumatic/: CMakeLists.txt  pneumatic_1.cpp  pneumatic_int.cpp  pneumatic_int.h
systems/powerdc/: CMakeLists.txt  allElCons.cpp  allElCons.h  powerdc_1.cpp  powerdc_11.cpp  powerdc_12.cpp  powerdc_13.cpp  powerdc_14.cpp  powerdc_15.cpp  powerdc_16.cpp  powerdc_20.cpp  powerdc_21.cpp  powerdc_2_3.cpp  powerdc_4.cpp  powerdc_5_6.cpp  powerdc_7.cpp  powerdc_8.cpp  powerdc_9_10.cpp  powerdc_int.cpp  powerdc_int.h
systems/presure/: CMakeLists.txt  presure.cpp  presure_int.cpp  presure_int.h
systems/vim95/: CMakeLists.txt  land_comstations.cpp  land_comstations.h  vim95.cpp  vim95.h
systems/wingsmech/: CMakeLists.txt  wingsmech_1.cpp  wingsmech_2.cpp  wingsmech_3.cpp  wingsmech_4.cpp  wingsmech_int.cpp  wingsmech_int.h
