add_library(exchange "")
target_sources(exchange
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/Struct_DeviceConnect.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/Struct_FromRmiOper.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/Struct_FromRmiPilot.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/Struct_ISU.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/Struct_ToRmiNavig.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/bss.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/bss.cpp
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/exchange.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/exchange.cpp
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/uks.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/uks.cpp
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/switches.h
  PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/switches.cpp
  )

target_include_directories(exchange
  PUBLIC
  ${CMAKE_CURRENT_LIST_DIR}
  )
