option(IGNORE_VIM95 "Using vim95 module" OFF)

if(NOT IGNORE_VIM95)
  add_subdirectory(vim95)
endif()


add_subdirectory(aircondition)
add_subdirectory(antifire)
add_subdirectory(antiicing)
add_subdirectory(bailout)
add_subdirectory(brakes)
add_subdirectory(cabinlighting)
add_subdirectory(emergencyalarm)
add_subdirectory(hydro)
add_subdirectory(landinggear)
add_subdirectory(pneumatic)
add_subdirectory(powerdc)
add_subdirectory(presure)
add_subdirectory(wingsmech)
